# codex-local

./: CHANGES.md  CODEX-LOCAL-README.md  FIX-PLAN.md  FIXES-APPLIED.md  ISSUES.md  README.md  orchestrator_fix_quick_summary.md  orchestrator_fix_summary.md  orchestrator_improvements_summary.md  orchestrator_workflow_design.md  plan.md  simple_test.sh  test_config.rs  test_config.sh  test_final.sh  test_model_cleaning  test_orchestrator.sh  test_orchestrator_workflow.md  test_toml_parsing.rs  verify_config_path.sh
.github/codex/home/: config.toml
codex-cli/: package.json
codex-rs/: Cargo.toml  DEPLOY.md  deploy.sh  install.sh  test_config_path.rs
codex-rs/app-server-protocol/src/: protocol.rs
codex-rs/app-server/src/: codex_message_processor.rs  lib.rs  message_processor.rs
codex-rs/cli/: Cargo.toml
codex-rs/cli/src/: login.rs  main.rs  mcp_cmd.rs
codex-rs/common/src/: config_override.rs  lib.rs
codex-rs/core/: Cargo.toml
codex-rs/core/src/: child_agent_bridge.rs  codex.rs  config.rs  config_profile.rs  conversation_manager.rs  exec.rs  lib.rs  model_provider_info.rs
codex-rs/exec/src/: event_processor_with_human_output.rs  lib.rs
codex-rs/exec/tests/: event_processor_with_json_output.rs
codex-rs/mcp-server/src/: codex_tool_config.rs  (+3 more)
codex-rs/orchestrator/: Cargo.toml
codex-rs/orchestrator/src/: events.rs  lib.rs  profiles.rs  runtime.rs  spawner.rs  spec.rs  truncation.rs  validation.rs
codex-rs/orchestrator/tests/: orchestrator_tests.rs
codex-rs/tui/: Cargo.toml
docs/comparison/: copilot_vs_codex_matrix.md
scripts/: bin-codex-local.sh
(+52 files in other folders)
